UC14 - Integrated custom exception into TrainConsistApp